# eot

./: .gitignore  Cargo.toml  README.md  generate_forks.py
.cargo/: config.toml
.github/workflows/: main.yml
examples/: README.md  advanced_analysis.rs  basic_usage.rs  contract_analyzer.rs  gas_analysis.rs  registry_usage.rs
src/: gas.rs  lib.rs  traits.rs  unified.rs  validation.rs
src/forks/: berlin.rs  byzantium.rs  cancun.rs  constantinople.rs  frontier.rs  homestead.rs  istanbul.rs  london.rs  mod.rs  shanghai.rs
src/gas/: analysis.rs  calculator.rs  context.rs
tests/: integration.rs  unified_opcodes.rs
