[package]
name = "eot"
version = "0.1.4"
edition = "2021"
authors = ["alake"]
license = "MIT"
description = "EVM opcodes library for all Ethereum forks, with complete fork inheritance, validation, and metadata"
documentation = "https://docs.rs/eot"
homepage = "https://github.com/g4titanx/eot"
repository = "https://github.com/g4titanx/eot"
keywords = ["ethereum", "evm", "opcodes", "blockchain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "development-tools"]
readme = "README.md"

[features]
default = ["std"]
std = []
unified-opcodes = []

[dependencies]
