[package]
name = "eot"
version = "0.1.5"
edition = "2021"
authors = ["alake"]
license = "MIT"
description = "EVM opcodes library for all Ethereum forks, with complete fork inheritance, validation, and metadata"
documentation = "https://docs.rs/eot"
homepage = "https://github.com/g4titanx/eot"
repository = "https://github.com/g4titanx/eot"
keywords = ["ethereum", "evm", "opcodes", "blockchain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[features]
default = ["unified-opcodes"]
unified-opcodes = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }